OCL/HelloParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Hello.g4 by ANTLR 4.7.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.1")]
[System.CLSCompliant(false)]
public partial class HelloParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, Stereotype=47, LOWERCASE=48, UPPERCASE=49, DIGITS=50, WS=51;
	public const int
		RULE_oclFile = 0, RULE_packageName = 1, RULE_oclExpressions = 2, RULE_constraint = 3, 
		RULE_contextDeclaration = 4, RULE_classifierContext = 5, RULE_operationContext = 6, 
		RULE_operationName = 7, RULE_formalParameterList = 8, RULE_typeSpecifier = 9, 
		RULE_collectionType = 10, RULE_oclExpression = 11, RULE_returnType = 12, 
		RULE_expression = 13, RULE_letExpression = 14, RULE_ifExpression = 15, 
		RULE_logicalExpression = 16, RULE_relationalExpression = 17, RULE_additiveExpression = 18, 
		RULE_multiplicativeExpression = 19, RULE_unaryExpression = 20, RULE_postfixExpression = 21, 
		RULE_primaryExpression = 22, RULE_propertyCallParameters = 23, RULE_literal = 24, 
		RULE_enumLiteral = 25, RULE_simpleTypeSpecifier = 26, RULE_literalCollection = 27, 
		RULE_collectionItem = 28, RULE_propertyCall = 29, RULE_qualifiers = 30, 
		RULE_declarator = 31, RULE_pathName = 32, RULE_timeExpression = 33, RULE_actualParameterList = 34, 
		RULE_logicalOperator = 35, RULE_collectionKind = 36, RULE_relationalOperator = 37, 
		RULE_addOperator = 38, RULE_multiplyOperator = 39, RULE_unaryOperator = 40, 
		RULE_name = 41, RULE_number = 42;
	public static readonly string[] ruleNames = {
		"oclFile", "packageName", "oclExpressions", "constraint", "contextDeclaration", 
		"classifierContext", "operationContext", "operationName", "formalParameterList", 
		"typeSpecifier", "collectionType", "oclExpression", "returnType", "expression", 
		"letExpression", "ifExpression", "logicalExpression", "relationalExpression", 
		"additiveExpression", "multiplicativeExpression", "unaryExpression", "postfixExpression", 
		"primaryExpression", "propertyCallParameters", "literal", "enumLiteral", 
		"simpleTypeSpecifier", "literalCollection", "collectionItem", "propertyCall", 
		"qualifiers", "declarator", "pathName", "timeExpression", "actualParameterList", 
		"logicalOperator", "collectionKind", "relationalOperator", "addOperator", 
		"multiplyOperator", "unaryOperator", "name", "number"
	};

	private static readonly string[] _LiteralNames = {
		null, "'package'", "'endpackage'", "':'", "'context'", "'::'", "'('", 
		"')'", "'='", "'+'", "'-'", "'<'", "'<='", "'>='", "'>'", "'/'", "'*'", 
		"'<>'", "'implies'", "'not'", "'or'", "'xor'", "'and'", "','", "'let'", 
		"';'", "'if'", "'then'", "'else'", "'endif'", "'.'", "'->'", "'{'", "'}'", 
		"'..'", "'['", "']'", "'|'", "'@'", "'pre'", "'Set'", "'Bag'", "'Sequence'", 
		"'Collection'", "'_'", "'e'", "'E'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, "Stereotype", 
		"LOWERCASE", "UPPERCASE", "DIGITS", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Hello.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static HelloParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public HelloParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public HelloParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class OclFileContext : ParserRuleContext {
		public PackageNameContext[] packageName() {
			return GetRuleContexts<PackageNameContext>();
		}
		public PackageNameContext packageName(int i) {
			return GetRuleContext<PackageNameContext>(i);
		}
		public OclExpressionsContext[] oclExpressions() {
			return GetRuleContexts<OclExpressionsContext>();
		}
		public OclExpressionsContext oclExpressions(int i) {
			return GetRuleContext<OclExpressionsContext>(i);
		}
		public OclFileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_oclFile; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHelloListener typedListener = listener as IHelloListener;
			if (typedListener != null) typedListener.EnterOclFile(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHelloListener typedListener = listener as IHelloListener;
			if (typedListener != null) typedListener.ExitOclFile(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHelloVisitor<TResult> typedVisitor = visitor as IHelloVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOclFile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OclFileContext oclFile() {
		OclFileContext _localctx = new OclFileContext(Context, State);
		EnterRule(_localctx, 0, RULE_oclFile);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 91;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 86; Match(T__0);
				State = 87; packageName();
				State = 88; oclExpressions();
				State = 89; Match(T__1);
				}
				}
				State = 93;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==T__0 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PackageNameContext : ParserRuleContext {
		public PathNameContext pathName() {
			return GetRuleContext<PathNameContext>(0);
		}
		public PackageNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_packageName; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHelloListener typedListener = listener as IHelloListener;
			if (typedListener != null) typedListener.EnterPackageName(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHelloListener typedListener = listener as IHelloListener;
			if (typedListener != null) typedListener.ExitPackageName(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHelloVisitor<TResult> typedVisitor = visitor as IHelloVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPackageName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PackageNameContext packageName() {
		PackageNameContext _localctx = new PackageNameContext(Context, State);
		EnterRule(_localctx, 2, RULE_packageName);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 95; pathName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OclExpressionsContext : ParserRuleContext {
		public ConstraintContext[] constraint() {
			return GetRuleContexts<ConstraintContext>();
		}
		public ConstraintContext constraint(int i) {
			return GetRuleContext<ConstraintContext>(i);
		}
		public OclExpressionsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_oclExpressions; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHelloListener typedListener = listener as IHelloListener;
			if (typedListener != null) typedListener.EnterOclExpressions(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHelloListener typedListener = listener as IHelloListener;
			if (typedListener != null) typedListener.ExitOclExpressions(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHelloVisitor<TResult> typedVisitor = visitor as IHelloVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOclExpressions(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OclExpressionsContext oclExpressions() {
		OclExpressionsContext _localctx = new OclExpressionsContext(Context, State);
		EnterRule(_localctx, 4, RULE_oclExpressions);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 100;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__3) {
				{
				{
				State = 97; constraint();
				}
				}
				State = 102;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConstraintContext : ParserRuleContext {
		public ContextDeclarationContext contextDeclaration() {
			return GetRuleContext<ContextDeclarationContext>(0);
		}
		public ITerminalNode[] Stereotype() { return GetTokens(HelloParser.Stereotype); }
		public ITerminalNode Stereotype(int i) {
			return GetToken(HelloParser.Stereotype, i);
		}
		public OclExpressionContext[] oclExpression() {
			return GetRuleContexts<OclExpressionContext>();
		}
		public OclExpressionContext oclExpression(int i) {
			return GetRuleContext<OclExpressionContext>(i);
		}
		public NameContext[] name() {
			return GetRuleContexts<NameContext>();
		}
		public NameContext name(int i) {
			return GetRuleContext<NameContext>(i);
		}
		public ConstraintContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_constraint; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHelloListener typedListener = listener as IHelloListener;
			if (typedListener != null) typedListener.EnterConstraint(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHelloListener typedListener = listener as IHelloListener;
			if (typedListener != null) typedListener.ExitConstraint(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHelloVisitor<TResult> typedVisitor = visitor as IHelloVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConstraint(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConstraintContext constraint() {
		ConstraintContext _localctx = new ConstraintContext(Context, State);
		EnterRule(_localctx, 6, RULE_constraint);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 103; contextDeclaration();
			State = 110;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 104; Match(Stereotype);
				State = 106;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__43) | (1L << LOWERCASE) | (1L << UPPERCASE))) != 0)) {
					{
					State = 105; name();
					}
				}

				State = 108; Match(T__2);
				State = 109; oclExpression();
				}
				}
				State = 112;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==Stereotype );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ContextDeclarationContext : ParserRuleContext {
		public OperationContextContext operationContext() {
			return GetRuleContext<OperationContextContext>(0);
		}
		public ClassifierContextContext classifierContext() {
			return GetRuleContext<ClassifierContextContext>(0);
		}
		public ContextDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_contextDeclaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHelloListener typedListener = listener as IHelloListener;
			if (typedListener != null) typedListener.EnterContextDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHelloListener typedListener = listener as IHelloListener;
			if (typedListener != null) typedListener.ExitContextDeclaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHelloVisitor<TResult> typedVisitor = visitor as IHelloVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitContextDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ContextDeclarationContext contextDeclaration() {
		ContextDeclarationContext _localctx = new ContextDeclarationContext(Context, State);
		EnterRule(_localctx, 8, RULE_contextDeclaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114; Match(T__3);
			State = 117;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				{
				State = 115; operationContext();
				}
				break;
			case 2:
				{
				State = 116; classifierContext();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassifierContextContext : ParserRuleContext {
		public NameContext[] name() {
			return GetRuleContexts<NameContext>();
		}
		public NameContext name(int i) {
			return GetRuleContext<NameContext>(i);
		}
		public ClassifierContextContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classifierContext; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHelloListener typedListener = listener as IHelloListener;
			if (typedListener != null) typedListener.EnterClassifierContext(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHelloListener typedListener = listener as IHelloListener;
			if (typedListener != null) typedListener.ExitClassifierContext(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHelloVisitor<TResult> typedVisitor = visitor as IHelloVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassifierContext(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ClassifierContextContext classifierContext() {
		ClassifierContextContext _localctx = new ClassifierContextContext(Context, State);
		EnterRule(_localctx, 10, RULE_classifierContext);
		try {
			State = 124;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 119; name();
				State = 120; Match(T__2);
				State = 121; name();
				}
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 123; name();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OperationContextContext : ParserRuleContext {
		public NameContext name() {
			return GetRuleContext<NameContext>(0);
		}
		public OperationNameContext operationName() {
			return GetRuleContext<OperationNameContext>(0);
		}
		public FormalParameterListContext formalParameterList() {
			return GetRuleContext<FormalParameterListContext>(0);
		}
		public ReturnTypeContext returnType() {
			return GetRuleContext<ReturnTypeContext>(0);
		}
		public OperationContextContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_operationContext; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHelloListener typedListener = listener as IHelloListener;
			if (typedListener != null) typedListener.EnterOperationContext(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHelloListener typedListener = listener as IHelloListener;
			if (typedListener != null) typedListener.ExitOperationContext(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHelloVisitor<TResult> typedVisitor = visitor as IHelloVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperationContext(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OperationContextContext operationContext() {
		OperationContextContext _localctx = new OperationContextContext(Context, State);
		EnterRule(_localctx, 12, RULE_operationContext);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 126; name();
			State = 127; Match(T__4);
			State = 128; operationName();
			State = 129; Match(T__5);
			State = 130; formalParameterList();
			State = 131; Match(T__6);
			State = 134;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__2) {
				{
				State = 132; Match(T__2);
				State = 133; returnType();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OperationNameContext : ParserRuleContext {
		public NameContext name() {
			return GetRuleContext<NameContext>(0);
		}
		public OperationNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_operationName; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHelloListener typedListener = listener as IHelloListener;
			if (typedListener != null) typedListener.EnterOperationName(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHelloListener typedListener = listener as IHelloListener;
			if (typedListener != null) typedListener.ExitOperationName(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHelloVisitor<TResult> typedVisitor = visitor as IHelloVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperationName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OperationNameContext operationName() {
		OperationNameContext _localctx = new OperationNameContext(Context, State);
		EnterRule(_localctx, 14, RULE_operationName);
		try {
			State = 152;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__43:
			case LOWERCASE:
			case UPPERCASE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 136; name();
				}
				break;
			case T__7:
				EnterOuterAlt(_localctx, 2);
				{
				State = 137; Match(T__7);
				}
				break;
			case T__8:
				EnterOuterAlt(_localctx, 3);
				{
				State = 138; Match(T__8);
				}
				break;
			case T__9:
				EnterOuterAlt(_localctx, 4);
				{
				State = 139; Match(T__9);
				}
				break;
			case T__10:
				EnterOuterAlt(_localctx, 5);
				{
				State = 140; Match(T__10);
				}
				break;
			case T__11:
				EnterOuterAlt(_localctx, 6);
				{
				State = 141; Match(T__11);
				}
				break;
			case T__12:
				EnterOuterAlt(_localctx, 7);
				{
				State = 142; Match(T__12);
				}
				break;
			case T__13:
				EnterOuterAlt(_localctx, 8);
				{
				State = 143; Match(T__13);
				}
				break;
			case T__14:
				EnterOuterAlt(_localctx, 9);
				{
				State = 144; Match(T__14);
				}
				break;
			case T__15:
				EnterOuterAlt(_localctx, 10);
				{
				State = 145; Match(T__15);
				}
				break;
			case T__16:
				EnterOuterAlt(_localctx, 11);
				{
				State = 146; Match(T__16);
				}
				break;
			case T__17:
				EnterOuterAlt(_localctx, 12);
				{
				State = 147; Match(T__17);
				}
				break;
			case T__18:
				EnterOuterAlt(_localctx, 13);
				{
				State = 148; Match(T__18);
				}
				break;
			case T__19:
				EnterOuterAlt(_localctx, 14);
				{
				State = 149; Match(T__19);
				}
				break;
			case T__20:
				EnterOuterAlt(_localctx, 15);
				{
				State = 150; Match(T__20);
				}
				break;
			case T__21:
				EnterOuterAlt(_localctx, 16);
				{
				State = 151; Match(T__21);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FormalParameterListContext : ParserRuleContext {
		public NameContext[] name() {
			return GetRuleContexts<NameContext>();
		}
		public NameContext name(int i) {
			return GetRuleContext<NameContext>(i);
		}
		public TypeSpecifierContext[] typeSpecifier() {
			return GetRuleContexts<TypeSpecifierContext>();
		}
		public TypeSpecifierContext typeSpecifier(int i) {
			return GetRuleContext<TypeSpecifierContext>(i);
		}
		public FormalParameterListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_formalParameterList; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHelloListener typedListener = listener as IHelloListener;
			if (typedListener != null) typedListener.EnterFormalParameterList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHelloListener typedListener = listener as IHelloListener;
			if (typedListener != null) typedListener.ExitFormalParameterList(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHelloVisitor<TResult> typedVisitor = visitor as IHelloVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFormalParameterList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FormalParameterListContext formalParameterList() {
		FormalParameterListContext _localctx = new FormalParameterListContext(Context, State);
		EnterRule(_localctx, 16, RULE_formalParameterList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 167;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__43) | (1L << LOWERCASE) | (1L << UPPERCASE))) != 0)) {
				{
				State = 154; name();
				State = 155; Match(T__2);
				State = 156; typeSpecifier();
				State = 164;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__22) {
					{
					{
					State = 157; Match(T__22);
					State = 158; name();
					State = 159; Match(T__2);
					State = 160; typeSpecifier();
					}
					}
					State = 166;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeSpecifierContext : ParserRuleContext {
		public SimpleTypeSpecifierContext simpleTypeSpecifier() {
			return GetRuleContext<SimpleTypeSpecifierContext>(0);
		}
		public CollectionTypeContext collectionType() {
			return GetRuleContext<CollectionTypeContext>(0);
		}
		public TypeSpecifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeSpecifier; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHelloListener typedListener = listener as IHelloListener;
			if (typedListener != null) typedListener.EnterTypeSpecifier(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHelloListener typedListener = listener as IHelloListener;
			if (typedListener != null) typedListener.ExitTypeSpecifier(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHelloVisitor<TResult> typedVisitor = visitor as IHelloVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeSpecifier(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeSpecifierContext typeSpecifier() {
		TypeSpecifierContext _localctx = new TypeSpecifierContext(Context, State);
		EnterRule(_localctx, 18, RULE_typeSpecifier);
		try {
			State = 171;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__43:
			case LOWERCASE:
			case UPPERCASE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 169; simpleTypeSpecifier();
				}
				break;
			case T__39:
			case T__40:
			case T__41:
			case T__42:
				EnterOuterAlt(_localctx, 2);
				{
				State = 170; collectionType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CollectionTypeContext : ParserRuleContext {
		public CollectionKindContext collectionKind() {
			return GetRuleContext<CollectionKindContext>(0);
		}
		public SimpleTypeSpecifierContext simpleTypeSpecifier() {
			return GetRuleContext<SimpleTypeSpecifierContext>(0);
		}
		public CollectionTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_collectionType; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHelloListener typedListener = listener as IHelloListener;
			if (typedListener != null) typedListener.EnterCollectionType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHelloListener typedListener = listener as IHelloListener;
			if (typedListener != null) typedListener.ExitCollectionType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHelloVisitor<TResult> typedVisitor = visitor as IHelloVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCollectionType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CollectionTypeContext collectionType() {
		CollectionTypeContext _localctx = new CollectionTypeContext(Context, State);
		EnterRule(_localctx, 20, RULE_collectionType);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 173; collectionKind();
			State = 174; Match(T__5);
			State = 175; simpleTypeSpecifier();
			State = 176; Match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
